# ai-log-analyzer

./: .gitignore  .report.json  README.md  pyproject.toml
.github/workflows/: python-ci.yml
reqs/: requirements_test.txt  requirments.txt
schema/: blueprint.json  schema.json  summary.json
scripts/: main.py
src/log_analyzer/: analyzer.py  llm_client.py  loader.py  report.py
test/: test_log_analyzer.py
